﻿------------------------CVS after 3.00 beta 6----------------
NEW FEATURE:  DWI tree loading via "DWIPath".
NEW FEATURE:  Pump couples support.
BUG FIX:  Editor no longer crashes if you try to drag a hold note up
	before beat 0.
CHANGE:  Hold head now drawn in place tap note graphic when a Hold starts
	on the same row.
CHANGE:  Added bright ghost flash on hold note score of OK.
CHANGE:  Font format new easier to export for font creators.  See README 
	for details.
NEW FEATURE:  Option Icons.
NEW FEATURE:  Best sort now shows only top 30 songs.
NEW FEATURE:  Option codes on the Select Music and Select Course screens
	Codes are defined in the metrics.ini file and thus can be edited and
	changed per-theme.  The "Dedicated Menu Buttons" option does not 
	have to be enabled to use codes. 
NEW FEATURE:  SuperShuffle shuffles each individual note row.  This 
	makes for a completely different note pattern every time.
CHANGE:  Boost is now a separate option and can be combined with other 
	effects.
NEW FEATURE:  New Effects: Backwards and Tornado.
NEW FEATURE:  More informative crash dialog.
BUG FIX:  Fix editor saving files with an extra space at the end
	of the filename.
NEW FEATURE:  #SELECTABLE:YES, NO, ROULETTE.
NEW FEATURE:  Added assist tick toggle to editor.
NEW FEATURE:  Added editing of text fields to editor.
CHANGE:  Improved the appearance of hidden/sudden.
CHANGE:  After changing sort to "BEST", focus will be changed to the 
	the most-played song.
CHANGE:  Texture Hints have been removed in favor of smarter, automatic
	texture format chooser.
CHANGE:  New Nullsoft NSIS installer.
CHANGE:  NG no longer breaks combo.
NEW FEATURE:  Hidden easter egg.  You have to be "perfect" to find it.
	And cheaters never prosper!
NEW FEATURE:  If a song is missing Notes of a certain NotesType, Notes of 
	the missing type will be generated from the existing types.  For 
	example, this will allow any pump song to be played in the dance
	game mode, and vice versa.